# EsurfingClient_Android

./: .flutter-plugins-dependencies  CLAUDE.md  README.md  analysis_options.yaml  check_endif.py  pubspec.yaml  trace_endif.py  trace_endif2.py
.dart_tool/: package_config.json  package_graph.json
.github/workflows/: build-apk.yml  build-magisk-module.yml
android/: build.gradle  local.properties
android/app/: build.gradle  debug.keystore  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  DialerClient.c  NetClient.c  States.c  ffi_bridge.c  ffi_bridge.h  main_magisk.c
android/app/src/main/cpp/cipher/impl/: aes_cbc.c
android/app/src/main/cpp/inc/: NetClient.h  States.h
android/app/src/main/cpp/inc/utils/: Logger.h
android/app/src/main/cpp/inc/webserver/: mongoose.h
android/app/src/main/cpp/utils/: Logger.c  PlatformUtils.c  SimProcess.c
android/app/src/main/cpp/webserver/: WebServer.c
android/app/src/main/java/com/example/esurfing_client/: ESurfingMainActivity.kt  MainActivity.kt
android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
android/app/src/main/res/xml/: accessibility_keepalive.xml  network_security_config.xml
android/gradle/wrapper/: gradle-wrapper.properties
esurfing_flutter/: pubspec.yaml
esurfing_flutter/android/: gradlew
esurfing_flutter/android/app/src/main/: AndroidManifest.xml
esurfing_flutter/android/app/src/main/cpp/: DialerClient.c  ffi_bridge.c  ffi_bridge.h
esurfing_flutter/android/app/src/main/cpp/cipher/impl/: desede_cbc.c
esurfing_flutter/android/app/src/main/cpp/inc/: States.h
esurfing_flutter/android/app/src/main/cpp/inc/utils/: SimProcess.h
esurfing_flutter/android/app/src/main/cpp/utils/: Shutdown.c
esurfing_flutter/android/app/src/main/cpp/webserver/: WebServer.c
esurfing_flutter/android/app/src/main/java/com/example/esurfing_client/: KeepAliveService.kt  MainActivity.kt
esurfing_flutter/android/app/src/main/res/values/: strings.xml
esurfing_flutter/android/app/src/main/res/xml/: accessibility_keepalive.xml
esurfing_flutter/app/: build.gradle
esurfing_flutter/app/src/main/cpp/: CMakeLists.txt  NetClient.c  ffi_bridge.c  ffi_bridge.h
esurfing_flutter/app/src/main/cpp/cipher/impl/: aes_ecb.c  desede_ecb.c
esurfing_flutter/app/src/main/cpp/inc/: NetClient.h
esurfing_flutter/app/src/main/cpp/inc/utils/: PlatformUtils.h  Shutdown.h
esurfing_flutter/app/src/main/cpp/utils/: PlatformUtils.c  Service.c
esurfing_flutter/app/src/main/cpp/webserver/: WebServer.c
esurfing_flutter/app/src/main/java/com/example/esurfing_client/: KeepAliveService.kt
esurfing_flutter/app/src/main/res/xml/: accessibility_keepalive.xml
esurfing_flutter/lib/src/model/: config.dart
esurfing_flutter/lib/src/native/: auth_controller.dart  bindings.dart  keep_alive_channel.dart
esurfing_flutter/lib/src/ui/: home_page.dart  settings_page.dart
lib/: main.dart
lib/src/i18n/: app_localizations.dart
lib/src/model/: config.dart
lib/src/native/: auth_controller.dart  bindings.dart  keep_alive_channel.dart
lib/src/services/: log_reader.dart
lib/src/ui/: home_page.dart  settings_page.dart
lib/src/widgets/: log_viewer.dart
magisk/: CMakeLists.txt  README.md  build.sh
magisk/app/: build.gradle  settings.gradle.kts
magisk/app/src/main/: AndroidManifest.xml
magisk/app/src/main/java/com/esurfing/ui/: MainActivity.java  MainActivity.kt
magisk/app/src/main/res/drawable/: ic_launcher_foreground.xml
magisk/app/src/main/res/values/: strings.xml
magisk/module/: ESurfingClient.json  action.sh  customize.sh  module.prop  service.sh  uninstall.sh
magisk/module/portal/: index.html
magisk/module/webroot/: index.html
magisk/portal/: index.html
